// ==========================================================================
// This is auto-generated by gf cli tool. DO NOT EDIT THIS FILE MANUALLY.
// 重要! 增加数据库字段，只能向后增加，否则不能使用工具生成proto
// ==========================================================================

syntax = "proto3";

package pb;

option go_package = "../app/pb";

message EntityXsEmoticon {
           //@inject_tag: orm:"id,primary"       
    uint32 id                                   = 1; //   
           //@inject_tag: orm:"key_word,unique"  
    string key_word                             = 2; //   
           //@inject_tag: orm:"content"          
    string content                              = 3; //   
           //@inject_tag: orm:"create_time"      
    uint32 create_time                          = 4; //   
           //@inject_tag: orm:"update_time"      
    uint32 update_time                          = 5; //   
}