// ==========================================================================
// This is auto-generated by gf cli tool. DO NOT EDIT THIS FILE MANUALLY.
// 重要! 增加数据库字段，只能向后增加，否则不能使用工具生成proto
// ==========================================================================

syntax = "proto3";

package db.xianshi;

option go_package = "github.com/olaola-chat/rbp-proto/gen_pb/db/xianshi";

message EntityXsUserSettings {
           //@inject_tag: orm:"uid,primary"              
    int32  uid                                          = 1;  //                                             
           //@inject_tag: orm:"stranger_msg"             
    int32  stranger_msg                                 = 2;  // 是否接收陌生人消息                          
           //@inject_tag: orm:"dateline"                 
    int32  dateline                                     = 3;  //                                             
           //@inject_tag: orm:"close_box_receive"        
    int32  close_box_receive                            = 4;  //                                             
           //@inject_tag: orm:"close_box_open_gift"      
    uint32 close_box_open_gift                          = 5;  //                                             
           //@inject_tag: orm:"close_join_room_group"    
    int32  close_join_room_group                        = 6;  // 不自动加入房间群                            
           //@inject_tag: orm:"close_create_room_group"  
    int32  close_create_room_group                      = 7;  // 不自动创建房间群                            
           //@inject_tag: orm:"language"                 
    string language                                     = 8;  // 语言                                        
           //@inject_tag: orm:"agreement_version"        
    uint32 agreement_version                            = 9;  // 协议版本号                                  
           //@inject_tag: orm:"operate_by_admin"         
    uint32 operate_by_admin                             = 10; // 用户设置被后台操作过                        
           //@inject_tag: orm:"close_user_join_room"     
    int32  close_user_join_room                         = 11; // 关闭好友踩房通知                            
           //@inject_tag: orm:"close_fans_attention"     
    int32  close_fans_attention                         = 12; // 关闭粉丝关注提醒                            
           //@inject_tag: orm:"nearby_invisible"         
    int32  nearby_invisible                             = 13; // 关闭附近的人                                
           //@inject_tag: orm:"push_status"              
    int32  push_status                                  = 14; // push开关状态，0未知，1打开 2关闭            
           //@inject_tag: orm:"mentor_apply_attention"   
    uint32 mentor_apply_attention                       = 15; // 拜师申请的push消息推送开关 0-不推送 1-推送  
           //@inject_tag: orm:"distance_privacy"         
    int32  distance_privacy                             = 16; // 1 所有人可见 2 好友可见 3 不可见            
           //@inject_tag: orm:"addr_book_invisible"      
    int32  addr_book_invisible                          = 17; // 手机通讯录隐身，0关闭，1开启                
           //@inject_tag: orm:"area_code"                
    string area_code                                    = 18; //                                             
}