syntax = "proto3";
package rbp.rpc.user;

/*
user_profile rpc 协议
*/

option go_package = "github.com/olaola-chat/rbp-proto/gen_pb/rpc/user";

//获取单个请求请求
message ReqUserProfile {
	//需要查询的用户UID
	uint32	uid 		= 1; 
	//需要返回哪些字段，为空的话，表示所有字段名
	repeated string fields = 2;
}

//获取批量请求
message ReqUserProfiles {
	//批量请求用户UID集合
	repeated uint32	uids = 1; 
	//需要返回哪些字段，为空的话，表示所有字段名
	repeated string fields = 2; 
}

//验证用户登录令牌合法性
message ReqUserAuth {
	//当前登录用户令牌
	string token = 1; 
}

//返回验证用户信息
message RepUserAuth {
	uint32	uid		= 1;
	uint32	time		= 2;
	uint32	app_id	= 3;
	string 	salt		= 4;
	string	platform	= 5;
	string	channel	= 6;
}

//申请令牌
message ReqUserToken {
	uint32 uid = 1; 
	uint32 app_id = 2;
	string platform = 3; // app or web
	string channel = 4; // 可选
}

//返回令牌
message RepUserToken {
	string token = 1;
}

//返回多个用户信息
message RepUserProfiles {
}



message ReqUsersBitMap{
	//批量请求用户UID集合
	repeated uint32	uids = 1;
}


message UserBitMapItem{
	uint32  uid = 1;
}


message RepUsersBitMap{
	repeated UserBitMapItem data = 1;
}


message ReqGetUserIpInfo{
	string Ip = 1;//ip地址10.10.10.10
}

message RepGetUserIpInfo{
		string country = 1;//国家
		string code = 2;//code，我也不知道是啥@zeng.gang
		string province = 3;//省
		string city = 4;//城市
		string telecom = 5;//通信商
}


//返回多人设置信息
message RepUserSettings {
}

message ReqNeedVerify {
	uint32 uid = 1;
}

message RepNeedVerify {
	bool success = 1;
	uint32 res = 2;
}

//根据用户名字检索
//只返回最近7天里，等级不低于5级的用户数据
message ReqUserSearchName {
	//检索关键字，不能为空，不能为停止词
	string keyword 	= 1;
	//检索哪些app的数据
	repeated uint32 app_id = 2;
	//返回数量
	uint32 limit = 3;
	//搜索着等级
	uint32 searcherLevel = 4;
}

//通用检索返回
message RepUserSearchDefault {
	//符合条件的数量
	uint32 total = 1;
	//返回的用户uids集合
	repeated uint32 data = 2;
}
